Fix start page to be responsive on small device

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,6 +48,9 @@ header {
 }
 
 /* start page */
+h2 {
+    margin: 30px 0;
+}
 
 .main-page {
     display: flex;
@@ -66,7 +69,6 @@ header {
     background-size: cover;
     width: 100%;
     height: 100%;
-    position: relative;
     border-radius: 5px;
     margin: 10px auto;
 }
@@ -78,6 +80,7 @@ header {
     text-align: center;
     width: 50%;
     height: 20px;
+    margin: 10px;
 }
 
 /* button styling*/
@@ -125,12 +128,12 @@ header {
     background-color: rgba(112, 151, 181, 0.9);
     border-radius: 20px;
     padding: 30px;
+    width: 80%;
 }
 
 #question-area {
     font-size: 24px;
     margin: 20px auto;
-    height: 80px;
 }
 
 #answers {
@@ -249,4 +252,15 @@ li {
 .social-networks i {
     color: #150335;
     font-size: 30px;
+}
+
+/* for mobile screen size 600px and down */
+@media screen and (max-width: 600px) {
+    #startup-img {
+        background: url(../images/walt-disney-studios.webp) no-repeat center center;
+        background-size: cover;
+        width: 100%;
+        height: 400px;
+        border-radius: 5px;
+    }
 }
